- feat : k8s 서비스에서 정상 작동하도록 수정