@@ -1,66 +1,74 @@
-package com.jinwon.ssoauth.domain.entity.user;
+package com.jinwon.ssoauth.domain.entity.profile;
 
+import com.fasterxml.jackson.annotation.JsonManagedReference;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.fasterxml.jackson.databind.annotation.JsonDeserialize;
 import com.jinwon.ssoauth.domain.entity.deserializer.AuthorityDeserializer;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
+import com.jinwon.ssoauth.domain.entity.role.Role;
+import com.jinwon.ssoauth.infra.converter.EncryptConverter;
+import lombok.AccessLevel;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
+import org.hibernate.annotations.Fetch;
+import org.hibernate.annotations.FetchMode;
 import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import javax.persistence.CollectionTable;
+import javax.persistence.CascadeType;
 import javax.persistence.Column;
-import javax.persistence.ElementCollection;
+import javax.persistence.Convert;
+import javax.persistence.Converter;
 import javax.persistence.Entity;
 import javax.persistence.GeneratedValue;
 import javax.persistence.GenerationType;
 import javax.persistence.Id;
-import javax.persistence.JoinColumn;
+import javax.persistence.OneToMany;
 import javax.persistence.Table;
 import javax.persistence.Transient;
+import javax.persistence.UniqueConstraint;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
- * 유저 Entity
+ * 프로필 Entity
  */
-@Builder
+@Table(uniqueConstraints = {
+        @UniqueConstraint(name = "profile_unique_001", columnNames = "email"),
+})
 @Getter
-@NoArgsConstructor
-@AllArgsConstructor
 @Entity
-@Table
-public class User implements UserDetails {
+@NoArgsConstructor(access = AccessLevel.PROTECTED)
+public class Profile implements UserDetails {
 
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
-    private long userId;
+    private Long profileId;
 
-    @Column(nullable = false, unique = true, length = 50)
-    private String uid;
-
-    @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
-    @Column(length = 100)
-    private String password;
-
-    @Column(nullable = false, length = 100)
-    private String name;
-
-    @Column(nullable = false, length = 100)
+    @Column(nullable = false, length = 350)
+    @Convert(converter = EncryptConverter.class)
     private String email;
 
-    @Column(length = 100)
-    private String provider;
+    @Column(nullable = false, length = 40)
+    private String name;
 
-    @ElementCollection
-    @CollectionTable(name = "user_roles", joinColumns = @JoinColumn(name = "role_sn", referencedColumnName = "userId"))
-    @Builder.Default
-    private final List<String> roles = new ArrayList<>();
+    @Column(nullable = false, length = 40)
+    private String profileName;
+
+    @Column(length = 100)
+    private String companyName;
+
+    @Column(nullable = false, length = 100)
+    @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
+    private String password;
+
+    @JsonManagedReference
+    @OneToMany(mappedBy = "profile", cascade = CascadeType.ALL, orphanRemoval = true)
+    private final List<Role> roles = new ArrayList<>();
+
+    @Transient
+    private String clientIp;
 
     @Transient
     private String accessToken;
@@ -68,21 +76,19 @@ public class User implements UserDetails {
     @Transient
     private String refreshToken;
 
-    @Transient
-    private String clientIp;
-
     @JsonDeserialize(using = AuthorityDeserializer.class)
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
         return this.roles.stream()
+                .map(Role::getRoleType)
                 .map(SimpleGrantedAuthority::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
     @Override
     public String getUsername() {
-        return this.uid;
+        return this.email;
     }
 
     @JsonProperty(access = JsonProperty.Access.WRITE_ONLY)
@@ -109,17 +115,17 @@ public class User implements UserDetails {
         return true;
     }
 
-    public User accessToken(String accessToken) {
+    public Profile accessToken(String accessToken) {
         this.accessToken = accessToken;
         return this;
     }
 
-    public User refreshToken(String refreshToken) {
+    public Profile refreshToken(String refreshToken) {
         this.refreshToken = refreshToken;
         return this;
     }
 
-    public User clientIp(String clientIp) {
+    public Profile clientIp(String clientIp) {
         this.clientIp = clientIp;
         return this;
     }
